@@ -24,6 +24,7 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+etc/*.sample
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
