@@ -1,2 +1,0 @@
-# deckhand
-A foundational python REST YAML processing engine providing data and secrets management to other platform services.
