@@ -1,0 +1,4 @@
+[DEFAULT]
+output_file = etc/deckhand/deckhand.conf.sample
+wrap_width = 80
+namespace = deckhand.conf
