@@ -1,0 +1,24 @@
+[tox]
+envlist = py35,py27,pep8
+
+[testenv]
+usedevelop = True
+setenv = VIRTUAL_ENV={envdir}
+         LANGUAGE=en_US
+         LC_ALL=en_US.utf-8
+deps=
+  -r{toxinidir}/requirements.txt
+  -r{toxinidir}/test-requirements.txt
+whitelist_externals = flake8
+
+[testenv:genconfig]
+commands = oslo-config-generator --config-file=etc/deckhand/config-generator.conf
+
+[testenv:pep8]
+commands = flake8 {posargs}
+
+[flake8]
+# D100, D103, D104 deal with docstrings in public functions
+# D205, D400, D401 deal with docstring formatting
+ignore=E121,E122,E123,E124,E125,E126,E127,E128,E129,E131,E251,H405,D100,D103,D104,D205,D400,D401
+exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build,tools/xenserver*,releasenotes
